--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
        
         <!-- <video autoplay class="embed-responsive-item d-block w-100" src="video/slide1.mp4"></video> -->
         <video class="video-fluid d-block w-100" autoplay loop muted>
-          <source src="video/slide1.mp4" type="video/mp4">
+          <source src="slide1.mp4" type="video/mp4">
         </video>
 
           <div class="carousel-caption d-none d-md-block">
