--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle lang" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Language
+                    Languge
                   </a>
                   <div class="dropdown-menu lang" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">English</a>
